--- a/models/Deep_Learning.ipynb
+++ b/models/Deep_Learning.ipynb
@@ -45,14 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "649555f5",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-30T11:05:40.235914Z",
+     "start_time": "2023-11-30T11:05:39.929577Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from Functions import GridSearch_, make_results\n",
+    "from Functions import GridSearch_, make_results_dl\n",
+    "import pickle\n",
     "\n",
     "# Visualizations\n",
     "import matplotlib.pyplot as plt\n",
@@ -87,18 +93,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "based-sarah",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-16T10:49:18.951730Z",
-     "start_time": "2023-11-16T10:49:15.618160Z"
+     "end_time": "2023-11-30T02:49:56.042971Z",
+     "start_time": "2023-11-30T02:49:53.381694Z"
     },
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "emote = pd.read_csv(\"data/MLUnige2021_train.csv\",usecols=['emotion', 'user', 'text'])\n",
+    "emote = pd.read_csv(\"../data/MLUnige2021_train.csv\",usecols=['emotion', 'user', 'text'])\n",
     "emote_50 = emote[:50000]   #  50.000 first obs\n",
     "emote_100 = emote[:100000] # 100.000 first obs\n",
     "emote_320 = emote[:320000] #  about 1/4 of obs\n",
@@ -129,19 +135,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 3,
    "id": "confirmed-technology",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-15T14:09:22.429375Z",
-     "start_time": "2023-11-15T14:08:33.676025Z"
+     "end_time": "2023-11-30T02:50:39.634935Z",
+     "start_time": "2023-11-30T02:49:56.045739Z"
     }
    },
    "outputs": [],
    "source": [
     "# Define the train and test sets (320 000 observations)\n",
     "data = emote\n",
-    "X_train, X_test, y_train, y_test = train_test_split((data.text + data.user), data.emotion, test_size=0.2, random_state=37)\n",
+    "X_train, X_test, y_train, y_test = train_test_split((data.text), data.emotion, test_size=0.2, random_state=37) # removed user for streamlit app\n",
     "\n",
     "max_features = 50000\n",
     "nb_classes = 2\n",
@@ -159,12 +165,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 4,
    "id": "997d5792",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-15T15:19:56.601035Z",
-     "start_time": "2023-11-15T14:09:22.432097Z"
+     "end_time": "2023-11-30T04:25:39.294682Z",
+     "start_time": "2023-11-30T02:50:39.638769Z"
     },
     "scrolled": true
    },
@@ -174,44 +180,55 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/2\n",
-      "7994/7994 [==============================] - 2045s 255ms/step - loss: 0.4125 - accuracy: 0.8109 - val_loss: 0.3820 - val_accuracy: 0.8281\n",
+      "8000/8000 [==============================] - 2353s 294ms/step - loss: 0.4168 - accuracy: 0.8079 - val_loss: 0.3917 - val_accuracy: 0.8237\n",
       "Epoch 2/2\n",
-      "7994/7994 [==============================] - 1898s 237ms/step - loss: 0.3530 - accuracy: 0.8429 - val_loss: 0.3751 - val_accuracy: 0.8335\n",
-      "1999/1999 [==============================] - 105s 50ms/step - loss: 0.3751 - accuracy: 0.8335\n",
-      "Test score: 0.37511518597602844\n",
-      "Test accuracy: 0.8334903717041016\n",
-      "7994/7994 [==============================] - 180s 22ms/step\n"
+      "8000/8000 [==============================] - 2966s 371ms/step - loss: 0.3642 - accuracy: 0.8373 - val_loss: 0.3804 - val_accuracy: 0.8287\n",
+      "2000/2000 [==============================] - 139s 67ms/step - loss: 0.3804 - accuracy: 0.8287\n",
+      "Test score: 0.3804347813129425\n",
+      "Test accuracy: 0.8287422060966492\n",
+      "8000/8000 [==============================] - 232s 28ms/step\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'make_results_dl' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_16836\\3430352616.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[1;31m# Append results\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 33\u001b[1;33m \u001b[0mLSTM_results\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmake_results_dl\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'LSTM_1'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     34\u001b[0m \u001b[0mresults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mresults\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mLSTM_results\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'make_results_dl' is not defined"
      ]
     }
    ],
    "source": [
     "batch_size = 128\n",
     "\n",
-    "model = Sequential()\n",
-    "model.add(Embedding(max_features, 128))\n",
-    "model.add(Dropout(0.2))\n",
-    "model.add(LSTM(100))\n",
-    "model.add(Dropout(0.2))\n",
-    "model.add(Dense(nb_classes, activation='sigmoid'))\n",
+    "model_1 = Sequential()\n",
+    "model_1.add(Embedding(max_features, 128))\n",
+    "model_1.add(Dropout(0.2))\n",
+    "model_1.add(LSTM(100))\n",
+    "model_1.add(Dropout(0.2))\n",
+    "model_1.add(Dense(nb_classes, activation='sigmoid'))\n",
     "\n",
-    "model.compile(loss='binary_crossentropy',\n",
+    "model_1.compile(loss='binary_crossentropy',\n",
     "              optimizer='adam', \n",
     "              metrics=['accuracy'])\n",
     "\n",
-    "model.fit(X_train, \n",
+    "model_1.fit(X_train, \n",
     "          Y_train, \n",
     "          batch_size=batch_size, \n",
     "          epochs=2,\n",
     "          validation_data=(X_test, Y_test))\n",
     "\n",
-    "score, acc = model.evaluate(X_test, \n",
+    "score, acc = model_1.evaluate(X_test, \n",
     "                            Y_test,\n",
     "                            batch_size=batch_size)\n",
     "print('Test score:', score)\n",
     "print('Test accuracy:', acc)\n",
     "\n",
     "# Predict the output class\n",
-    "y_pred = model.predict(X_test)\n",
+    "y_pred = model_1.predict(X_test)\n",
     "\n",
     "# Extract the most probable class\n",
     "y_pred = np.argmax(y_pred,axis=1)\n",
@@ -219,6 +236,39 @@
     "# Append results\n",
     "LSTM_results = make_results_dl('LSTM_1', y_test, y_pred)\n",
     "results = pd.concat([results, LSTM_results], axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6b161f91",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-30T11:05:48.456426Z",
+     "start_time": "2023-11-30T11:05:48.116426Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "LSTM_results = make_results_dl('LSTM_1', y_test, y_pred)\n",
+    "results = pd.concat([results, LSTM_results], axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "73e8ccf7",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-30T11:06:01.216317Z",
+     "start_time": "2023-11-30T11:06:00.054718Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#  export LSTM model to pickle \n",
+    "with open('LSTM1_model.pkl','wb') as file:\n",
+    "    pickle.dump(model_1, file)"
    ]
   },
   {
